# fluvial-particle

./: .bumpversion.cfg  .cookiecutter.json  .envrc  .flake8  .gitignore  .gitlab-ci.yml  .pre-commit-config.yaml  .readthedocs.yml  .safety-policy.yml  .secrets.baseline  CLAUDE.md  CODE_OF_CONDUCT.md  CODE_OF_CONDUCT.rst  CODE_REVIEW.md  CONTRIBUTING.md  CONTRIBUTING.rst  DISCLAIMER.md  ENVIRONMENT_SETUP.md  HISTORY.md  HISTORY.rst  LICENSE.rst  README.md  README.rst  code.json  environment-mpi.yml  environment.yml  meta.yaml  notebook_environment.yml  noxfile.py  pyproject.toml  requirements.dev  requirements.txt  setup.py  verify_environment.py
.claude/rules/: documentation.md  environment.md  file-formats.md  notebooks.md  output-refactoring.md  testing.md  versioning.md
.github/: copilot-instructions.md
.github/workflows/: constraints.txt  release.yml  tests.yml
docs/: codeofconduct.rst  conf.py  contributing.rst  example.rst  hdf5files.rst  hpcinstall.rst  index.rst  license.rst  memory.rst  optionsfile.rst  output.rst  reference.rst  requirements.txt  scaling.rst  usage.rst  xdmffiles.rst
docs/data/: cells.csv  particles.csv
notebooks/: FM_GridFill.ipynb  Fluvial-particle-demo.ipynb  api-demo.ipynb  npz-input-mesh-demo.ipynb  out2csv.ipynb
notebooks/sandbox/: cgns_to_vts.ipynb  cgns_to_vts.qmd  convert_vtk_to_vts.qmd  inspect_output.qmd  inspect_vts.qmd
src/fluvial_particle/: FallingParticles.py  Helpers.py  LarvalParticles.py  Particle.py  ParticleNew.py  ParticleTrack.py  Particles.py  RiverGrid.py  Settings.py  UserDefinedParticles.py  VSParticles.py  VarSrcParticles.py  __init__.py  __main__.py  cli.py  helpers.py  inspection.py  results.py  settings.py  simulation.py
src/fluvial_particle/grids/: __init__.py  time_varying_grid.py
src/fluvial_particle/io/: __init__.py  pvd_writer.py  vtp_writer.py
tests/: .gitignore  __init__.py  support.py  test_funcs.py  test_inspection.py  test_io.py  test_main.py  test_results.py  test_settings_toml.py  test_time_varying.py  test_ustar_methods.py  test_utils.py  user_options.py  user_options_rmcd.py
tests/data/: .gitignore  Result_2D_time_average.vts  Result_FM_MEander_1_long_2D1.npz  Result_FM_MEander_1_long_2D1.vtk  Result_FM_MEander_1_long_3D1_new.npz  Result_FM_MEander_1_long_3D1_new.vtk  Result_straight_2d_1.npz  Result_straight_2d_1.vtk  Result_straight_2d_1.vts  Result_straight_3d_1_new.npz  Result_straight_3d_1_new.vtk  Result_straight_3d_1_new.vts  fluvparticle-fork.code-workspace  user_options_checkpoint.py  user_options_falling.py  user_options_larvalbot.py  user_options_larvaltop.py  user_options_npz.py  user_options_straight_checkpoint.py  user_options_straight_falling.py  user_options_straight_larvalbot.py  user_options_straight_larvaltop.py  user_options_straight_npz.py  user_options_straight_test.py  user_options_straight_test_vts.py  user_options_straight_varsrc.py  user_options_test.py  user_options_test.toml  user_options_time_series.py  user_options_varsrc.py  varsrc.csv  varsrc_straight.csv
tests/data/output_checkpoint_fixed/: cells.h5  cells_onedim.xmf  cells_threedim.xmf  cells_twodim.xmf  particles.h5  particles.xmf
tests/data/output_falling_fixed/: cells.h5  cells_onedim.xmf  cells_threedim.xmf  cells_twodim.xmf  particles.h5
tests/data/output_fixed/: cells.h5  particles.h5  particles.xmf
tests/data/output_larvbot_fixed/: cells.h5  particles.h5
tests/data/output_larvtop_fixed/: cells.h5  particles.h5
tests/data/output_straight/: cells.h5  particles.h5  particles.xmf
tests/data/output_straight_checkpoint/: cells.h5  cells_onedim.xmf  cells_threedim.xmf  cells_twodim.xmf  particles.h5  particles.xmf
tests/data/output_straight_falling/: cells.h5  cells_onedim.xmf  cells_threedim.xmf  cells_twodim.xmf  particles.h5  particles.xmf
tests/data/output_straight_larvalbot/: cells.h5  cells_threedim.xmf  cells_twodim.xmf  particles.h5  particles.xmf
tests/data/output_straight_larvaltop/: cells.h5  cells_onedim.xmf  cells_threedim.xmf  particles.h5  particles.xmf
tests/data/output_straight_varsrc/: cells_onedim.xmf  cells_threedim.xmf  cells_twodim.xmf  particles.h5  particles.xmf
tests/data/output_varsrc_fixed/: cells.h5  cells_onedim.xmf  cells_threedim.xmf  cells_twodim.xmf  particles.h5
tests/data/time_series_straight/: Result_2D_2.vts  Result_2D_3.vts  Result_2D_4.vts  Result_2D_5.vts  Result_2D_6.vts  Result_3D_2.vts  Result_3D_3.vts  Result_3D_4.vts  Result_3D_5.vts  Result_3D_6.vts
tests/test/: cells_onedim.xmf  cells_threedim.xmf  cells_twodim.xmf  particles.xmf
