[project]
name = "fluvial-particle"
version = "0.0.3"
description = "Lagrangian particle-tracking for fluvial environments."
authors = [
    {name = "Richard McDonald", email = "rmcd@usgs.gov"}
]
license = {file = "LICENSE.md"}
readme = "README.md"
requires-python = ">=3.10,<4.0"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    "h5py>=3.7.0",
    "vtk>=9.1",
]

[project.optional-dependencies]
dev = [
    "black>=24.0.0",
    "darglint>=1.8.1",
    "flake8>=7.0.1",
    "flake8-bandit>=4.0.0",
    "flake8-bugbear>=24.4.25",
    "flake8-docstrings>=1.6.0",
    "flake8-rst-docstrings>=0.3.0",
    "nox>=2024.4.15",
    "pep8-naming>=0.12.1",
    "pre-commit>=3.0.0",
    "pre-commit-hooks>=4.2.0",
    "safety>=2.2.0",
    "mypy>=1.0.1",
    "pytest>=7.1.2",
    "coverage[toml]>=7.4",
    "Pygments>=2.12.0",
    "typeguard>=2.13.3",
    "xdoctest>=1.0.0",
    "Sphinx>=7.0.0",
    "sphinx-click>=6.0.0",
    "sphinx-autobuild>=2024.4.0",
    "sphinx-rtd-theme>=2.0.0",
    "myst-parser>=4.0.0",
    "reorder-python-imports>=3.1.0",
    "ipython>=8.10.0",
    "bump2version>=1.0.1",
    "bandit>=1.7.4",
    "gitpython>=3.1.30",
    "pydocstyle>=6.3.0",
]

[project.scripts]
fluvial_particle = "fluvial_particle:track_serial"
fluvial_particle_mpi = "fluvial_particle:track_mpi"

[project.urls]
Homepage = "https://code.usgs.gov/wma/nhgf/fluvparticle"
Repository = "https://code.usgs.gov/wma/nhgf/fluvparticle"
Documentation = "https://fluvial-particle.readthedocs.io/en/latest/"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/fluvial_particle"]

[tool.black]
line-length = 88
target-version = ["py310"]

[tool.coverage.paths]
source = ["src", "*/site-packages"]

[tool.coverage.run]
branch = true
source = ["fluvial_particle"]

[tool.coverage.report]
show_missing = true
fail_under = 60

[tool.mypy]
check_untyped_defs = true
disallow_any_generics = true
disallow_incomplete_defs = true
disallow_subclassing_any = true
disallow_untyped_calls = true
disallow_untyped_decorators = true
disallow_untyped_defs = true
no_implicit_optional = true
no_implicit_reexport = true
pretty = true
show_column_numbers = true
show_error_codes = true
show_error_context = true
strict_equality = true
warn_redundant_casts = true
warn_return_any = true
warn_unreachable = true
warn_unused_configs = true
warn_unused_ignores = true
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "tests.*"
warn_unused_ignores = false

[[tool.mypy.overrides]]
module = "noxfile"
warn_unreachable = false
disallow_untyped_decorators = false
