[project]
name = "fluvial-particle"
version = "0.0.5"
description = "Lagrangian particle-tracking for fluvial environments."
authors = [
    {name = "Richard McDonald", email = "rmcd@usgs.gov"}
]
license = {file = "LICENSE.md"}
readme = "README.md"
requires-python = ">=3.10,<3.14"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

dependencies = []

[project.optional-dependencies]
# Compiled dependencies - conda provides these locally (see environment.yml)
# Only install from PyPI in CI or pure-pip environments
ci = [
    "h5py>=3.7.0",
    "numpy>=1.20",
    "vtk>=9.3.1",
]
dev = [
    # Linting and formatting (replaces black, flake8, darglint, etc.)
    "ruff>=0.8.0",

    # Development tools
    "nox>=2024.4.15",
    "pre-commit>=3.0.0",
    "pre-commit-hooks>=4.2.0",

    # Type checking
    "mypy>=1.0.1",

    # Security and safety
    "safety>=2.2.0",

    # Testing
    "pytest>=7.1.2",
    "coverage[toml]>=7.4",
    "typeguard>=2.13.3",
    "xdoctest>=1.0.0",
    "pandas>=2.0.0",

    # Documentation
    "Sphinx>=7.0.0",
    "sphinx-click>=6.0.0",
    "sphinx-autobuild>=2024.4.0",
    "sphinx-rtd-theme>=2.0.0",
    "myst-parser>=4.0.0",
    "Pygments>=2.12.0",

    # Utilities
    "ipython>=8.10.0",
    "bump-my-version>=0.26.0",
    "gitpython>=3.1.30",
]

[project.scripts]
fluvial_particle = "fluvial_particle.cli:track_serial"
fluvial_particle_mpi = "fluvial_particle.cli:track_mpi"

[project.urls]
Homepage = "https://code.usgs.gov/wma/nhgf/fluvparticle"
Repository = "https://code.usgs.gov/wma/nhgf/fluvparticle"
Documentation = "https://fluvial-particle.readthedocs.io/en/latest/"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/fluvial_particle"]

[tool.ruff]
target-version = "py310"
line-length = 120
extend-exclude = ["tests/data"]
preview = true  # Enable preview features for DOC rules

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # pyflakes
    "I",      # isort (import sorting)
    "N",      # pep8-naming
    "B",      # flake8-bugbear
    "S",      # flake8-bandit (security)
    "D",      # pydocstyle (docstrings)
    "DOC",    # docstring argument checking (replaces darglint)
    "UP",     # pyupgrade (modernize Python syntax)
    "C4",     # flake8-comprehensions
    "SIM",    # flake8-simplify
    "PTH",    # flake8-use-pathlib
    "RET",    # flake8-return
    "ARG",    # flake8-unused-arguments
    "ERA",    # eradicate (commented out code)
    "PL",     # pylint
    "PERF",   # perflint (performance)
    "RUF",    # ruff-specific rules
]
ignore = [
    "E203",    # Whitespace before ':' (conflicts with formatter)
    "E501",    # Line too long (handled by formatter)
    "D203",    # One blank line before class (conflicts with D211)
    "D213",    # Multi-line summary second line (conflicts with D212)
    "PLR0913", # Too many arguments
    "PLR0917", # Too many positional arguments
    "PLR0914", # Too many local variables
    "PLR0915", # Too many statements
    "PLR0904", # Too many public methods
    "PLR6301", # No self use (method could be function)
    "PLR2004", # Magic value comparison
    "DOC201",  # Docstring missing returns (can be addressed gradually)
    "DOC501",  # Docstring missing exception (can be addressed gradually)
    "ERA001",  # Commented out code (sometimes needed for reference)
    "PTH118",  # Use pathlib (can be modernized gradually)
    "N999",    # Invalid module name (some modules use specific conventions)
    "S101",    # Use of assert (needed for tests)
    "SIM108",  # if-else-block-instead-of-if-exp (readability preference)
    "SIM115",  # open-file-with-context-handler (some cases need manual management)
    "PLC0415", # import-outside-top-level (needed for optional MPI import)
    "PLW2901", # redefined-loop-name (intentional in some cases)
]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401", "D104", "RUF067"]  # Unused imports (re-exports), missing docstring OK, allow metadata vars
"simulation.py" = ["PLR0912"]  # Too many branches (complex simulation logic)
"Particles.py" = ["PLR0912"]  # Too many branches (multiple u* computation methods)
"inspection.py" = ["PLR0911", "PLR0912"]  # Too many returns/branches (u* method dispatch)
"noxfile.py" = ["D", "S"]         # Skip docstring and security checks
"tests/**/*.py" = ["D", "S101", "PLR2004"]  # Skip docstrings, allow assert and magic values
"verify_environment.py" = ["PERF203"]  # Allow try-except in loop for module checking

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.lint.isort]
known-first-party = ["fluvial_particle"]
force-single-line = false
lines-after-imports = 2

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

[tool.bandit]
exclude_dirs = ["tests", "docs"]
skips = ["B101"]  # Skip assert warnings (needed for tests)

[tool.coverage.paths]
source = ["src", "*/site-packages"]

[tool.coverage.run]
branch = true
source = ["fluvial_particle"]
relative_files = true

[tool.coverage.report]
show_missing = true
fail_under = 60

[tool.mypy]
check_untyped_defs = true
disallow_any_generics = true
disallow_incomplete_defs = true
disallow_subclassing_any = true
disallow_untyped_calls = true
disallow_untyped_decorators = true
disallow_untyped_defs = true
no_implicit_optional = true
no_implicit_reexport = true
pretty = true
show_column_numbers = true
show_error_codes = true
show_error_context = true
strict_equality = true
warn_redundant_casts = true
warn_return_any = true
warn_unreachable = true
warn_unused_configs = true
warn_unused_ignores = true
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "tests.*"
warn_unused_ignores = false

[[tool.mypy.overrides]]
module = "noxfile"
warn_unreachable = false
disallow_untyped_decorators = false

[tool.bumpversion]
current_version = "0.0.5"
commit = true
tag = true
tag_name = "v{new_version}"
tag_message = "Release version {new_version}"
message = "Bump version: {current_version} → {new_version}"
parse = "(?P<major>\\d+)\\.(?P<minor>\\d+)\\.(?P<patch>\\d+)"
serialize = ["{major}.{minor}.{patch}"]

[[tool.bumpversion.files]]
filename = "pyproject.toml"
search = 'version = "{current_version}"'
replace = 'version = "{new_version}"'

[[tool.bumpversion.files]]
filename = "src/fluvial_particle/__init__.py"
search = '__version__ = "{current_version}"'
replace = '__version__ = "{new_version}"'

[[tool.bumpversion.files]]
filename = ".bumpversion.cfg"
search = 'current_version = {current_version}'
replace = 'current_version = {new_version}'

[[tool.bumpversion.files]]
filename = "code.json"
search = '"version": "{current_version}"'
replace = '"version": "{new_version}"'

[[tool.bumpversion.files]]
filename = "meta.yaml"
search = 'version: {current_version}'
replace = 'version: {new_version}'

[dependency-groups]
dev = [
    "ipykernel>=7.1.0",
    "meshio>=5.3.5",
    "nox>=2025.11.12",
    "quarto-cli>=1.8.26",
]
